--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 
+
 body {
   margin: 0;
   padding: 0;
@@ -32,7 +33,7 @@ body {
 .site-header {
   color: #ffffff;
 
-  background-color: #222222;
+  background-color: #CEA098;
 }
 
 .site-header .container {
@@ -73,7 +74,7 @@ body {
 
   font-size: 14px;
   text-decoration: none;
-  color: #d4d4d4;
+  color:  #000000;
 }
 
 
@@ -144,7 +145,7 @@ body {
   font-size: 45px;
   line-height: 50px;
   font-family: "Courier New", monospace;
-  color: white;
+  color: #F4E5DA;
 }
 
 .about-us p {
@@ -154,7 +155,7 @@ body {
 
   font-size: 14px;
   line-height: 22px;
-  color: #d4d4d4;
+  color: #000000;
 }
 
 .btn {
@@ -234,7 +235,7 @@ body {
 .features {
   padding: 85px 0;
 
-  background-color: #131313;
+  background-color: #DCC1C0;
 
   color: #ffffff;
 }
@@ -259,7 +260,7 @@ body {
 
   font-size: 14px;
   line-height: 20px;
-  color: #d4d4d4;
+  color: #000000;
 }
 
 
@@ -371,7 +372,7 @@ body {
 
   color: #ffffff;
 
-  background-color: #131313;
+  background-color:  #CEA098;
 
 }
 
@@ -440,7 +441,7 @@ body {
   text-transform: uppercase;
   text-decoration: none;
 
-  border-bottom: 1px solid #555555;
+  border-bottom: 1px solid #d6d6d6;
 
 }
 
@@ -457,7 +458,7 @@ body {
 
 .footer-submenu a {
   text-decoration: none;
-  color: #888888;
+  color: #000000;
 }
 
 
